Modify matrix mark for different components

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ Mkfile.old
 dkms.conf
 
 MaguireInTheMiddleCode/.vs/MaguireInTheMiddleCode/v14/.atsuo
+
+Testing/testHexFile/testHexFile/
+
+Testing/testHexFile/
